src/test/ui/parser/pat-ranges-2.rs
// Parsing of range patterns

// compile-flags: -Z parse-only

fn main() {
    let 10 ..= makropulos!() = 12; //~ error: expected one of `::`, `:`, `;`, or `=`, found `!`
}
